syntax = "proto3";

package faretrend;

option java_multiple_files = true;

option java_package = "com.hna.rest.air.faretrend";

service FareTrend {
    rpc airFareTrends (FareTrendRQ) returns (FareTrendRS) {
    }
}

// 特价机票请求
message FareTrendRS {
    string code = 1;
    string status = 2;
    string message = 3;
    string org = 4;
    string dst = 5;
    message AirLowFare {
        string date = 1;
        string currency = 2;
        string amount = 3;
    }
    repeated AirLowFare fares = 6;
}

message FareTrendRQ {
    string org = 1; // 响应结果
    string dst = 2; // 响应码
    string startDate = 3;
    string endDate = 4;
}

